# Simple meson build for the keccc executable

executable('keccc', [
    'cgn/nasm/cgn_expr.c',
    'cgn/nasm/cgn_regs.c',
    'cgn/nasm/cgn_stmt.c',
    'decl.c',
    'expr.c',
    'gen.c',
    'main.c',
    'misc.c',
    'scan.c',
    'stmt.c',
    'symbol.c',
    'tree.c',
    'types.c'
  ],
  install: true
)
