# Simple meson build for the keccc executable

executable('keccc', [
    'cgn/nasm/cgn_expr.c',
    'cgn/nasm/cgn_ops.c',
    'cgn/nasm/cgn_regs.c',
    'cgn/nasm/cgn_stmt.c',
    'cgn/aarch64/cgn_expr.c',
    'cgn/aarch64/cgn_ops.c',
    'cgn/aarch64/cgn_regs.c',
    'cgn/aarch64/cgn_stmt.c',
    'cgn/cg_ops.c',
    'decl.c',
    'expr.c',
    'gen.c',
    'main.c',
    'misc.c',
    'scan.c',
    'stmt.c',
    'symbol.c',
    'tree.c',
    'treedump.c',
    'types.c'
  ],
  install: true
)
